Atualizaçoes finais - front

--- a/Uhlmann_front/src/app/components/cadastro-usuario/cadastro-usuario.component.css
+++ b/Uhlmann_front/src/app/components/cadastro-usuario/cadastro-usuario.component.css
@@ -1,5 +1,5 @@
 .pagina-inicial{
-    --color-page-background-color-page: #ffffff; /*Cor fundo da página*/
+    --color-page-background-color-page: #ffffff;
 }
 
 .navbarcss{
